--- a/package.json
+++ b/package.json
@@ -15,9 +15,24 @@
     "@mantine/dates": "^6.0.13",
     "@mantine/form": "^6.0.13",
     "@mantine/hooks": "^6.0.13",
+    "@react-pdf/renderer": "^3.1.9",
+    "@tabler/icons-react": "^2.12.0",
+    "axios": "^1.3.4",
+    "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
+    "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
+    "leaflet": "^1.9.3",
+    "lottie-react": "^2.4.0",
+    "mantine-datatable": "^2.3.5",
+    "notistack": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.10.0",
+    "yup": "^1.0.2",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
